# midifile

./: .gitignore  .gitmodules  .serve  .travis.yml  CMakeLists.txt  CNAME  LICENSE.txt  Makefile  Makefile.cs4995  Makefile.examples  Makefile.library  Makefile.programs  README.md  _config.yml  appveyor.yml  index.html  index.md  params.json
.github/workflows/: actions.yml
_includes/class/: Makefile  classlist.html  classsummary.html  updateclasslist
_includes/code/: notelist.cpp
_includes/docslot/: Binasc.html  Binasc_main.html  Binasc_options.html  MFEvent.html  MFEvent.pre  Makefile  MidiEvent.html  MidiEventList.html  MidiFile.html  MidiFile_other.html  MidiFile_private.html  MidiFile_readwrite.html  MidiFile_static.html  MidiFile_time.html  MidiFile_track.html  MidiMessage.html  MidiMessage_meta.html  MidiMessage_other.html  Options.html  docslot.html  fixcontent  keyboardCommands.html  processFiles
_includes/layout/: breadcrumbs.html  footer.html  google-analytics.html  group.html  head.html  header.html  qtip.html  span-links.html
_includes/stylesheets/: function.css
_includes/tutorial/: Makefile  contents.html  fixsize.html  header.html  inserttutorialist  mirror.html  note-attacks.html  noteattacks.html  offswitch.html  reverse.html  single.html  tutoriallist.html
_layout/: default.html
_layouts/: default.html
class/: Makefile  index.md
class/Binasc/: docslot.html  docslot_main.html  docslot_options.html  getBytes.aton  getComments.aton  getLineBytes.aton  getLineLength.aton  getMidi.aton  index.md  readFromBinary.aton  setBytes.aton  setComments.aton  setLineBytes.aton  setLineLength.aton  setMidi.aton  writeToBinary.aton
class/MFEvent/: docslot.html  getChannelNibble.aton  getCommandNibble.aton  getTempoBPM.aton  getTempoMicro.aton  getTempoSPT.aton  getTempoSeconds.aton  getTempoTPS.aton  index.md  isMeta.aton  isNoteOff.aton  isNoteOn.aton  isTempo.aton  isTimbre.aton  operator=.aton  operatorEQUALS.aton  setChannelNibble.aton  setCommandByte.aton  setCommandNibble.aton  setMetaTempo.aton
class/MidiEvent/: docslot.html  getDurationInSeconds.aton  getLinkedEvent.aton  getTickDuration.aton  index.md  isLinked.aton  linkEvent.aton  operatorEQUALS.aton  unlinkEvent.aton
class/MidiEventList/: Makefile  append.aton  back.aton  clear.aton  clearLinks.aton  detach.aton  docslot.html  getSize.aton  index.md  linkNotePairs.aton  operatorSQUAREBRACKETS.aton  push_back_no_copy.aton  reserve.aton  size.aton
class/MidiFile/: absoluteTicks.aton  absoluteTime.aton  addEvent.aton  addMetaEvent.aton  addPitchBend.aton  addTrack.aton  allocateEvents.aton  buildTimeMap.aton  clear.aton  deleteTrack.aton  deltaTicks.aton  deltaTime.aton  doTimeAnalysis.aton  doTimeInSecondsAnalysis.aton  docslot  docslot.html  docslot_private.html  docslot_static.html  erase.aton  extractMidiData.aton  extractVlvTime.aton  getAbsoluteTickTime.aton  getEvent.aton  getEventCount.aton  getFilename.aton  getNumEvents.aton  getSplitTrack.aton  getTicksPerQuarterNote.aton  getTimeInSeconds.aton  getTimeState.aton  getTrack.aton  getTrackCount.aton  getTrackState.aton  hasJoinedTracks.aton  hasSplitTracks.aton  index.md  isAbsoluteTime.aton  isDeltaTime.aton  joinTracks.aton  linearTickInterpolationAtSecond.aton  (+26 more)
class/MidiMessage/: MidiMessage.html  docslot_meta.html  docslot_other.html  getChannelNibble.aton  getCommandByte.aton  getCommandNibble.aton  getKeyNumber.aton  getSize.aton  getTempoBPM.aton  getTempoMicro.aton  getTempoSPT.aton  getTempoSeconds.aton  (+22 more)
cs4995/: Key.hpp  MidiObject.hpp  MidiOutput.hpp  Note.hpp  StringProcessing.hpp  Track.hpp  chordTest.cpp  irrationalTest.cpp  notesDivisionTest.cpp  stringTest.cpp  twinkleTest.cpp
doc/: index.html
examples/: binasc.cpp  drumtab.cpp  mid2hum.cpp  midi2binasc.cpp  midi2melody.cpp  midi2notes.cpp  midi2skini.cpp  midicat.cpp  midiexcerpt.cpp  peep2midi.cpp  text2midi.cpp  tohex.cpp  vlv.cpp
include/: Array.cpp  Array.h  Binasc.h  FileIO.h  Kernel.h  MidiData.h  MidiEvent.h  MidiEventList.h  MidiFile.h  MidiMessage.h  Options.h  Options_private.h  SigCollection.h  SigConfiguration.h  SoundFile.h  SoundFileHelpers.h  SoundFileRead.h  SoundFileWrite.h  SoundHeader.h  sigConfiguration.h
javascripts/: aton.min.js  external-links.js
src/: Binasc.cpp  FileIO.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp  Options.cpp  Options_private.cpp
src-library/: Binasc.cpp  FileIO.cpp  Kernel.cpp  MidiData.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp  Options.cpp  SigCollection.cpp  SoundFileHelpers.cpp  SoundFileRead.cpp  SoundFileWrite.cpp  SoundHeader.cpp
src-programs/: 80off.cpp  asciimidi.cpp  binasc.cpp  createmidifile.cpp  createmidifile2.cpp  deleteOverlapps.cpp  drumtab.cpp  durations.cpp  extractlyrics.cpp  henonfile.cpp  maxtick.cpp  mid2hex.cpp  mid2hum.cpp  mid2mat.cpp  mid2mtb.cpp  mid2svg.cpp  midi2beep.cpp  midi2binasc.cpp  midi2melody.cpp  midi2notes.cpp  midi2skini.cpp  midi2text.cpp  midicat.cpp  mididump.cpp  midiexcerpt.cpp  midimixup.cpp  miditime.cpp  peep2midi.cpp  perfid.cpp  readstatus.cpp  redexpress.cpp  removenote.cpp  retick.cpp  shutak.cpp  smfdur.cpp  spectrum.cpp  stretch.cpp  sysextest.cpp  text2midi.cpp  textmidi.cpp  (+7 more)
stylesheets/: stylesheet.css
test/: test.cpp
tools/: .makeCmake  .makeReadme  80off.cpp  CMakeLists.txt  README.md  asciimidi.cpp  base642midi.cpp  binasc.cpp  chaninfo.cpp  channelinfo.cpp  createmidifile.cpp  createmidifile2.cpp  deltatimes.cpp  drumtab.cpp  durations.cpp  echomidi.cpp  extractlyrics.cpp  henonfile.cpp  linkinfo.cpp  maxtick.cpp  mid2hex.cpp  mid2hum.cpp  mid2mat.cpp  mid2mtb.cpp  mid2svg.cpp  midi2base64.cpp  midi2beep.cpp  midi2binasc.cpp  midi2chords.cpp  midi2melody.cpp  midi2notes.cpp  midi2skini.cpp  midi2text.cpp  midicat.cpp  midicater.cpp  mididiss.cpp  midiexcerpt.cpp  midimean.cpp  midimixup.cpp  midirange.cpp  (+28 more)
tutorial/: index.md
visual-studio/: README.md  binasc.vcxproj  createmidifile.vcxproj  midi2binasc.vcxproj  mididump.vcxproj  midifile.sln  midifile.vcxproj  spectrum.vcxproj  stretch.vcxproj
(+84 files in other folders)
